--- a/index.html
+++ b/index.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>AM-Meme-Generator</title>
 </head>
+
 <body onload="onInit()">
 
-    <div class="canvas-container">
-        <canvas id="my-canvas" height="450" width="450" ></canvas>
-    </div>
+    <section class="canvas-section">
+        <div class="canvas-container">
+            <canvas id="my-canvas" height="450" width="450"></canvas>
+        </div>
+
+        <div class="btns-container">
+            <form action="input">
+                <label for="text">Insert text: </label>
+                <input class="text-input" type="text" name="text" id="text" placeholder="Your Text Here..">
+                <button class="text-input-btn" onclick="onTextInput(event)">Add</button>
+            </form>
+        </div>
+    </section>
 
     <div class="gallery-container">
-        <img class="img1" src="img/1.jpg">
+        <img class="1 img1" src="img/1.jpg" onclick="onSelectImg(this)">
+        <img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this)">
     </div>
 
     <script src="js/services/util-service.js"></script>
@@ -21,4 +34,5 @@
     <script src="js/services/meme-service.js"></script>
     <script src="js/controller.js"></script>
 </body>
+
 </html>
