--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>AM-Meme-Generator</title>
 </head>
 
-<body onload="onInit()">
+<body onload="onInit()" onclick="resizeCanvas()">
 
     <header class="nav-container">
         <nav class="nav-bar container">
@@ -23,7 +23,7 @@
 
     <section class="canvas-section container">
         <div class="canvas-container">
-            <canvas id="my-canvas" height="450" width="450"></canvas>
+            <canvas id="my-canvas" height="420" width="420"></canvas>
         </div>
 
         <div class="btns-container">
