--- a/index.html
+++ b/index.html
@@ -47,8 +47,24 @@
     </section>
 
     <div class="gallery-container container">
-        <div class="gallery-item"><img class="1 img1" src="img/1.jpg" onclick="onSelectImg(this, event)"></div>
+        <!-- <div class="gallery-item"><img class="1 img1" src="img/1.jpg" onclick="onSelectImg(this, event)"></div>
         <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
+        <div class="gallery-item"><img class="3 img3" src="img/3.jpg" onclick="onSelectImg(this, event)"></div>
+        <div class="gallery-item"><img class="4 img4" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
+        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
+        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
+        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
+        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
+        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
+        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
+        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
+        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
+        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
+        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
+        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
+        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
+        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
+        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div> -->
     </div>
 
     <footer>
