--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="nav-bar container">
             <h2 class="logo">Am-Prod</h2>
             <ul class="nav-list">
-                <li class="nav-btn">gallery</li>
+                <li class="nav-btn" onclick="onReset()">gallery</li>
                 <li class="nav-btn">meme</li>
                 <li class="nav-btn">about</li>
             </ul>
