--- a/index.html
+++ b/index.html
@@ -28,43 +28,60 @@
 
         <div class="btns-container">
             <form action="input">
-                <!-- <label for="text">Insert text: </label> -->
                 <input class="text-input" type="text" name="text" id="text" placeholder="Your Text Here..">
                 <button class="text-input-btn form-btn" onclick="onTextInput(event)">Add</button>
-                <button class="font-size font-size-up form-btn"
-                    onclick="onIncDecFont(event, 5)">A+</button><button class="font-size font-size-down form-btn"
-                    onclick="onIncDecFont(event, -5)">A-</button>
-                <button class="move-meme-btn move-meme-up form-btn"
-                    onclick="onUpDownText(event, -10)"><img class="arrow-up-text"
-                    src="img/symbols/arrow-up.png"></button><button class="move-meme-btn move-meme-down form-btn"
-                    onclick="onUpDownText(event, 10)"><img class="arrow-down-text"
-                    src="img/symbols/arrow-down.png"></button>
-                <button class="switch-line-btn form-btn" onclick="onSwitchLine(event)"><img class="arrow-up"
-                        src="img/symbols/arrow-up.png"><img class="arrow-down"
-                        src="img/symbols/arrow-down.png"></button>
+                <div class="btns-sub-container">
+                    <button class="font-size font-size-up form-btn" onclick="onIncDecFont(event, 5)">A+</button><button
+                        class="font-size font-size-down form-btn" onclick="onIncDecFont(event, -5)">A-</button>
+                    <input type="color" name="color" id="color" class="form-btn color-set" oninput="onColorSet(value)">
+                    <select name="font-family" id="font-family" class="font-family" onclick="onFontSet(value)">
+                        <option value="Impact">Impact</option>
+                        <option value="Arial">Arial</option>
+                        <option value="monospace">Monospace</option>
+                    </select>
+                    <button class="align-left form-btn"><svg xmlns="http://www.w3.org/2000/svg"
+                            xmlns:v="https://vecta.io/nano" width="512" height="512" viewBox="0 0 333 333" fill="snow">
+                            <path
+                                d="M323 31.5H10c-5.5 0-10 4.5-10 10s4.5 10 10 10h313c5.5 0 10-4.5 10-10s-4.5-10-10-10zm-93 83H10c-5.5 0-10 4.5-10 10s4.5 10 10 10h220c5.5 0 10-4.5 10-10s-4.5-10-10-10zm93 84H10c-5.5 0-10 4.5-10 10s4.5 10 10 10h313c5.5 0 10-4.5 10-10s-4.5-10-10-10zm-172 83H10c-5.5 0-10 4.5-10 10s4.5 10 10 10h141c5.5 0 10-4.5 10-10s-4.5-10-10-10z" />
+                        </svg></button>
+                    <button class="align-center form-btn"><svg xmlns="http://www.w3.org/2000/svg"
+                            xmlns:v="https://vecta.io/nano" width="512" height="512" viewBox="0 0 334.367 334.367"
+                            fill="snow">
+                            <path
+                                d="M10.45 52.245h313.47a10.45 10.45 0 0 0 10.449-10.449 10.45 10.45 0 0 0-10.449-10.449H10.45A10.45 10.45 0 0 0 0 41.796a10.45 10.45 0 0 0 10.449 10.449zm47.02 62.695a10.45 10.45 0 0 0-10.449 10.449 10.45 10.45 0 0 0 10.449 10.449H276.9a10.45 10.45 0 0 0 10.449-10.449A10.45 10.45 0 0 0 276.9 114.94H57.47zm266.448 83.6H10.45A10.45 10.45 0 0 0 0 208.98a10.45 10.45 0 0 0 10.449 10.449h313.47a10.45 10.45 0 0 0 10.449-10.449 10.45 10.45 0 0 0-10.449-10.449zm-86.204 83.592H96.653a10.45 10.45 0 0 0-10.449 10.449 10.45 10.45 0 0 0 10.449 10.449h141.06a10.45 10.45 0 0 0 10.449-10.449 10.45 10.45 0 0 0-10.449-10.449z" />
+                        </svg></button>
+                    <button class="align-right form-btn"><svg xmlns="http://www.w3.org/2000/svg"
+                            xmlns:v="https://vecta.io/nano" width="512" height="512" viewBox="0 0 333 333" fill="snow">
+                            <path
+                                d="M323 31.5H10c-5.5 0-10 4.5-10 10s4.5 10 10 10h313c5.5 0 10-4.5 10-10s-4.5-10-10-10zm0 83H104c-5.5 0-10 4.5-10 10s4.5 10 10 10h219c5.5 0 10-4.5 10-10s-4.5-10-10-10zm0 84H10c-5.5 0-10 4.5-10 10s4.5 10 10 10h313c5.5 0 10-4.5 10-10s-4.5-10-10-10zm0 83H182c-5.5 0-10 4.5-10 10s4.5 10 10 10h141c5.5 0 10-4.5 10-10s-4.5-10-10-10z" />
+                        </svg></button>
+                </div>
+                <button class="move-meme-btn move-meme-up form-btn" onclick="onUpDownText(event, -10)"><svg
+                        xmlns="http://www.w3.org/2000/svg" xmlns:v="https://vecta.io/nano" width="512" height="512"
+                        viewBox="0 0 512.005 512.005">
+                        <path
+                            d="M466.22 205.787L263.553 3.12c-4.16-4.16-10.923-4.16-15.083 0L45.804 205.787C24 227.6 24 263.067 45.804 284.87s57.28 21.803 79.083 0l77.78-77.78v251.584c0 29.397 23.936 53.333 53.333 53.333s53.333-23.936 53.333-53.333V207.088l77.78 77.78c21.803 21.803 57.28 21.803 79.083 0 21.803-21.78 21.803-57.28.022-79.082z"
+                            fill="snow" /></svg></button><button class="move-meme-btn move-meme-down form-btn"
+                    onclick="onUpDownText(event, 10)"><svg class="arrow-text-down" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:v="https://vecta.io/nano" width="512" height="512" viewBox="0 0 512.005 512.005">
+                        <path
+                            d="M466.22 205.787L263.553 3.12c-4.16-4.16-10.923-4.16-15.083 0L45.804 205.787C24 227.6 24 263.067 45.804 284.87s57.28 21.803 79.083 0l77.78-77.78v251.584c0 29.397 23.936 53.333 53.333 53.333s53.333-23.936 53.333-53.333V207.088l77.78 77.78c21.803 21.803 57.28 21.803 79.083 0 21.803-21.78 21.803-57.28.022-79.082z"
+                            fill="snow" /></svg></button>
+                <button class="switch-line-btn form-btn" onclick="onSwitchLine(event)"><svg class="arrow-up"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:v="https://vecta.io/nano" width="512" height="512"
+                        viewBox="0 0 512.005 512.005">
+                        <path
+                            d="M466.22 205.787L263.553 3.12c-4.16-4.16-10.923-4.16-15.083 0L45.804 205.787C24 227.6 24 263.067 45.804 284.87s57.28 21.803 79.083 0l77.78-77.78v251.584c0 29.397 23.936 53.333 53.333 53.333s53.333-23.936 53.333-53.333V207.088l77.78 77.78c21.803 21.803 57.28 21.803 79.083 0 21.803-21.78 21.803-57.28.022-79.082z"
+                            fill="snow" /></svg><svg class="arrow-down" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:v="https://vecta.io/nano" width="512" height="512" viewBox="0 0 512.005 512.005">
+                        <path
+                            d="M466.22 205.787L263.553 3.12c-4.16-4.16-10.923-4.16-15.083 0L45.804 205.787C24 227.6 24 263.067 45.804 284.87s57.28 21.803 79.083 0l77.78-77.78v251.584c0 29.397 23.936 53.333 53.333 53.333s53.333-23.936 53.333-53.333V207.088l77.78 77.78c21.803 21.803 57.28 21.803 79.083 0 21.803-21.78 21.803-57.28.022-79.082z"
+                            fill="snow" /></svg></button>
             </form>
         </div>
     </section>
 
     <div class="gallery-container container">
-        <!-- <div class="gallery-item"><img class="1 img1" src="img/1.jpg" onclick="onSelectImg(this, event)"></div>
-        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
-        <div class="gallery-item"><img class="3 img3" src="img/3.jpg" onclick="onSelectImg(this, event)"></div>
-        <div class="gallery-item"><img class="4 img4" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
-        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
-        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
-        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
-        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
-        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
-        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
-        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
-        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
-        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
-        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
-        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
-        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
-        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div>
-        <div class="gallery-item"><img class="2 img2" src="img/2.jpg" onclick="onSelectImg(this, event)"></div> -->
     </div>
 
     <footer>
