--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header class="nav-container">
         <nav class="nav-bar container">
-            <h2 class="logo">Am-Prod</h2>
+            <h2 class="logo">Meme-ltd</h2>
             <ul class="nav-list">
                 <li class="nav-btn" onclick="onReset()">gallery</li>
                 <li class="nav-btn">meme</li>
@@ -87,7 +87,7 @@
     </div>
 
     <footer>
-        <div class="footer-logo">Am-Prod</div>
+        <div class="footer-logo">Meme-ltd</div>
         <small class="copyrights">© 2020 Am-Prod.com - All Rights Reserved</small>
     </footer>
 
