more features and bug fixes

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
             <div class="btns-container">
                 <form action="input" class="btns-form">
-                    <textarea class="text-input" cols='20' rows="3" name="text" id="text"
-                        placeholder="Your Text Here.."></textarea>
-                    <!-- <input oninput="onTextInput(event)" class="text-input" type="text" name="text" id="text" placeholder="Your Text Here.."></input> -->
+                    <!-- <textarea class="text-input" cols='20' rows="3" name="text" id="text"
+                        placeholder="Your Text Here.."></textarea> -->
+                    <input oninput="onTextInput(event)" class="text-input" type="text" name="text" id="text" placeholder="Your Text Here.."></input>
                     <button class="text-input-btn form-btn" onclick="onTextInput(event)">Add</button>
                     <button class="text-delete-btn form-btn" onclick="onDeleteLine(event)"><svg
                             xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
